--- a/Tex/src-SPAA/results-appendix.tex
+++ b/Tex/src-SPAA/results-appendix.tex
@@ -6,7 +6,7 @@
 \input{plots/unbalanced3small}
 \end{center}
 \caption{Throughput of unbalanced data structures. Small Tree. }
-\label{evaluation:results:unbalanced}
+\label{evaluation:results:unbalancedsmall}
 \end{figure*}
 
 \begin{figure*}
@@ -15,7 +15,7 @@
 \end{center}
 \caption{Throughput of balanced data
 structures. Small Tree.}
-\label{evaluation:results:balanced}
+\label{evaluation:results:balancedsmall}
 \end{figure*}
 
 \begin{figure*}
