--- a/Tex/src-DISC/document.tex
+++ b/Tex/src-DISC/document.tex
@@ -30,7 +30,7 @@ Idit Keidar\footnotemark[1] \footnotemark[2]\\
 \footnotemark[2]The Technion, Haifa, Israel
 }
 }
-\date{May 15, 2015}
+\date{}
 
 \maketitle
 
