--- a/Tex/src-DISC/document.tex
+++ b/Tex/src-DISC/document.tex
@@ -14,6 +14,13 @@
 \input{macros}
 \usepackage{fullpage}
 
+\def\denseformat{
+\setlength{\textheight}{9.8in} \setlength{\textwidth}{6.8in}
+\setlength{\oddsidemargin}{-0.3in} \setlength{\headsep}{0pt}
+\setlength{\topmargin}{-34pt} \setlength{\columnsep}{0.375in}
+}
+\denseformat
+
 \begin{document}
 
 \begin{titlepage}
