--- a/Tex/src-DISC/introduction.tex
+++ b/Tex/src-DISC/introduction.tex
@@ -36,13 +36,13 @@ Our approach combines optimism and pessimism in a practical way.
 Like some previous hand-crafted solutions~\cite{LazyList}, 
 %%In striking the balance between the two, 
 we exploit the common access pattern in data structure operations,
-(e.g., tree insertion), which typically begin by traversing the data structure (to the insertion point), and then perform local updates at that location.
-Our solution performs only the initial read-only traversal optimistically, and 
+(e.g., tree insertion or deletion), which typically begin by traversing the data structure (to the insertion or deletion point), and then perform local updates at that location.
+Our solution replaces locks in the initial read-only traversal with optimistic synchronization, and performs updates using the original lock-based code. It
 may thus be seen as a form of software lock elision for read-only prefixes of operations (transactions).
 %
 % Best of both worlds
-%Combining optimism and pessimism allows us to achieve ``the best of both worlds'' -- 
-While the
+Combining optimism and pessimism allows us to achieve ``the best of both worlds'' -- 
+while the
 optimistic traversal increases concurrency and eliminates bottlenecks,
 the use of pessimistic updates saves the overhead associated with speculative or deferred shared
 memory updates, (as occurs in \emph{software transactional memory (STM)}~\cite{HLR:SLCA2010}).
@@ -52,16 +52,17 @@ memory updates, (as occurs in \emph{software transactional memory (STM)}~\cite{H
 %that make the optimistic execution fail in some conflict-free cases (for example, when too many items would have been locked
 %by the original code), since we can always fallback upon lock-based execution.
 %
-Moreover, our transformation
-refrains from introducing a shared global clock (as used in some STM systems~\cite{DBLP:conf/eurosys/ShalevS06}) or other sources of contention. 
-%Thus, if the original code is \emph{disjoint access parallel}~\cite{Israeli:1994:DIS:197917.198079}, i.e., threads
-%that access disjoint (abstract) data objects do not contend on (low level) shared memory locations, then this
-%property holds also for the transformed code.
+
 
 % Properties of our transformation
 We show in Section~\ref{sec:proof} that our transformation preserves the external behavior (e.g., linearizability, serializability, and deadlock-freedom) of the original lock-based code; formal proofs are deferred to Appendix~\ref{sec:formal-proof}.
 %In other words, if the original code is correct (in the sense of serializability, linearizability, and deadlock-freedom), so is the
 %transformed version. 
+Moreover, our transformation preserves 
+\emph{disjoint access parallelism}~\cite{Israeli:1994:DIS:197917.198079}, (the property that threads 
+that access disjoint data objects do not contend on low level shared memory locations), as it
+refrains from introducing a shared global clock (as used in some STM systems~\cite{DBLP:conf/eurosys/ShalevS06}) or other sources of contention. 
+
 
 %\subsection{Towards Fully Automatic Parallelization}
 % Automatic parallelization
@@ -97,14 +98,9 @@ scalable parallelization of sequential code.
 %and are completely invisible to other threads.
 
 %\subsection{Evaluation}
-In Section~\ref{sec:eval} we evaluate our transformation by generating three data structures-- an unbalanced search tree, a treap
-(randomized balanced search tree),
-and a skip list that supports range queries, which are required by
-many applications (e.g.,~\cite{levelDB,FerroJKRY14}). 
-We synthesize the first two from sequential implementations using the algorithm of~\cite{Gueta2011} (\emph{domination locking}), followed by our transformation.
-For the skip list, we manually 
-\Idit{implement two-phase locking to}  
-add fine-grained locks to a sequential implementation, and then apply our transformation.
+In Section~\ref{sec:eval} we evaluate our transformation by generating an unbalanced search tree and a treap
+(randomized balanced search tree).
+We synthesize these data structures from \emph{sequential implementations} by applying first the algorithm of~\cite{Gueta2011} (\emph{domination locking}) to create lock-based code, and then our transformation.
 %All examples are implemented in Java. 
 We evaluate the scalability of the resulting code
 in a range of workload scenarios on a $32$-core machine.
@@ -120,13 +116,9 @@ Our results show that the search tree and treap implementations we have generate
 perform comparably to custom-tailored solutions.
 
 %
-
-Our ability to readily develop a data structure that supports both updates and lineariazable range queries with 
-performance comparable to the state-of-the-art illustrates the benefit of 
-%the broad applicability of 
-our \emph{generic} approach compared to specific custom-tailored implementations.
-%
-Other generic approaches we are familiar with are domination locking~\cite{Gueta2011} and STM~\cite{DiceSS2006}, both of which perform worse than our transformed code in our experiments. 
+The advantage of our approach is in its \emph{generic} nature, which allows us to parallelize existing code without requiring experts to perform
+manual optimizations.
+Other generic approaches we are familiar with are domination locking~\cite{Gueta2011} and STM~\cite{DBLP:conf/eurosys/ShalevS06}, both of which perform worse than our transformed code in our experiments. 
 %Software transactional memory is another general-purpose approach for parallelization,
 %%yet due to the significant overhead associated with this approach~\cite{Cascaval:2008,DuffyTM2010}, it is often complemented
 %by custom-tailored data structure implementations whose operations
@@ -135,8 +127,6 @@ Other generic approaches we are familiar with are domination locking~\cite{Gueta
 Further discussion of related work appears in Section~\ref{sec:related}.
 
 To conclude, this paper demonstrates that generic synchronization, based on a careful combination of optimism and
-pessimism, 
-%concurrency control, 
-is a promising approach for bringing legacy code to emerging computer architectures.
-%While this paper illustrates the method for tree and skip list data structures, we believe that the general direction may be more broadly applicable, and maybe %used with a variety of locking schemes, such as two phase locking.
+pessimism, is a promising approach for bringing legacy code to emerging computer architectures.
+While this paper illustrates the method for tree data structures, we believe that the general direction is more broadly applicable, and maybe used with a variety of locking schemes, such as two phase locking.
 Section~\ref{sec:discussion} concludes the paper and touches on some directions for future work. 
